--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,11 @@ body * {
   animation: slide-back 0.2s;
 }
 
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
+  transition: 0.05s;
+}
+
 .light #switch button {
   animation: slide-in 0.2s forwards;
 }
